--- a/RB10.Bot.Toysrus/Properties/Settings.settings
+++ b/RB10.Bot.Toysrus/Properties/Settings.settings
@@ -1,7 +1,12 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="RB10.Bot.Toysrus.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="JanCodeFileName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">C:\Users\USR949.NGASCTR\Desktop\jan.csv</Value>
+    </Setting>
+    <Setting Name="ResultFileName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">C:\Users\USR949.NGASCTR\Desktop\jan_result.csv</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
