--- a/RB10.Bot.Toysrus/App.config
+++ b/RB10.Bot.Toysrus/App.config
@@ -5,7 +5,7 @@
             <section name="RB10.Bot.Toysrus.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <startup> 
+    <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
     <applicationSettings>
@@ -18,4 +18,9 @@
             </setting>
         </RB10.Bot.Toysrus.Properties.Settings>
     </applicationSettings>
+    <system.net>
+        <defaultProxy>
+            <proxy usesystemdefault="False" />
+        </defaultProxy>
+    </system.net>
 </configuration>
