JANコード1つずつでの非同期処理追加

--- a/RB10.Bot.Toysrus/App.config
+++ b/RB10.Bot.Toysrus/App.config
@@ -18,9 +18,9 @@
             </setting>
         </RB10.Bot.Toysrus.Properties.Settings>
     </applicationSettings>
-    <system.net>
+    <!--<system.net>
         <defaultProxy>
             <proxy usesystemdefault="False" />
         </defaultProxy>
-    </system.net>
+    </system.net>-->
 </configuration>
