処理間隔指定追加、etc

--- a/RB10.Bot.Toysrus/App.config
+++ b/RB10.Bot.Toysrus/App.config
@@ -11,16 +11,14 @@
     <applicationSettings>
         <RB10.Bot.Toysrus.Properties.Settings>
             <setting name="JanCodeFileName" serializeAs="String">
-                <value>C:\Users\USR949.NGASCTR\Desktop\jan.csv</value>
+                <value>C:\temp\jan.csv</value>
             </setting>
-            <setting name="ResultFileName" serializeAs="String">
-                <value>C:\Users\USR949.NGASCTR\Desktop\jan_result.csv</value>
+            <setting name="Delay" serializeAs="String">
+                <value>1000</value>
+            </setting>
+            <setting name="UserAgent" serializeAs="String">
+                <value>ToysrusBot (+aaa@bbb.com)</value>
             </setting>
         </RB10.Bot.Toysrus.Properties.Settings>
     </applicationSettings>
-    <!--<system.net>
-        <defaultProxy>
-            <proxy usesystemdefault="False" />
-        </defaultProxy>
-    </system.net>-->
 </configuration>
