--- a/RB10.Bot.Toysrus/RB10.Bot.Toysrus.csproj
+++ b/RB10.Bot.Toysrus/RB10.Bot.Toysrus.csproj
@@ -85,7 +85,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\check-mark-icon.png" />
+    <None Include="Resources\check_active.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\check_deactive.png" />
