バッチ処理部修正

--- a/RB10.Bot.Toysrus/App.config
+++ b/RB10.Bot.Toysrus/App.config
@@ -19,6 +19,9 @@
             <setting name="UserAgent" serializeAs="String">
                 <value>ToysrusBot (+aaa@bbb.com)</value>
             </setting>
+            <setting name="IncludeUnPosted" serializeAs="String">
+                <value>False</value>
+            </setting>
         </RB10.Bot.Toysrus.Properties.Settings>
     </applicationSettings>
 </configuration>
