--- a/RB10.Bot.Toysrus/App.config
+++ b/RB10.Bot.Toysrus/App.config
@@ -17,7 +17,7 @@
                 <value>1000</value>
             </setting>
             <setting name="UserAgent" serializeAs="String">
-                <value>ToysrusBot (+aaa@bbb.com)</value>
+                <value>ToysrusBot</value>
             </setting>
             <setting name="IncludeUnPosted" serializeAs="String">
                 <value>False</value>
