--- a/RB10.Bot.Toysrus/Properties/Settings.settings
+++ b/RB10.Bot.Toysrus/Properties/Settings.settings
@@ -9,7 +9,7 @@
       <Value Profile="(Default)">1000</Value>
     </Setting>
     <Setting Name="UserAgent" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">ToysrusBot (+aaa@bbb.com)</Value>
+      <Value Profile="(Default)">ToysrusBot</Value>
     </Setting>
     <Setting Name="IncludeUnPosted" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
