--- a/RB10.Bot.YodobashiCamera/RB10.Bot.YodobashiCamera.csproj
+++ b/RB10.Bot.YodobashiCamera/RB10.Bot.YodobashiCamera.csproj
@@ -57,6 +57,8 @@
     <Compile Include="ExecForm.Designer.cs">
       <DependentUpon>ExecForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="File\ProductCodeFile.cs" />
+    <Compile Include="File\UnPostedFile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="YodobashiCameraBot.cs" />
